--- a/index.html
+++ b/index.html
@@ -533,11 +533,11 @@
         };
 
         fetch(
-          "https://api.airtable.com/v0/appZB3pFCihbG1d28/BASEDECADASTRO",
+          "https://api.airtable.com/v0/appGuthPd5hJXUGYQ/tblXma0echbQ1r0i5",
           {
             method: "POST",
             headers: {
-              Authorization: "Bearer keyE5fK4ReyymZczY",
+              Authorization: "Bearer patOhxV7DCQSBAnN4.bebf08508f71dfead6a6ea418933083311a9714e748b59868716bb68d95e02a8",
               "Content-Type": "application/json",
             },
             body: JSON.stringify(dados),
@@ -554,9 +554,9 @@
             infoInstalacaoDiv.style.display = "none";
             tipoPlanoContainer.style.display = "none";
 
-            const chatId = "-1001987647606";
+            const chatId = " -4945584051";
             const botToken =
-              "6100157217:AAFQUNi3Ahe9xtsn-xC_kdxKdxKdxKdxKdxKdxKdx";
+              "7782501693:AAHMgA1J_mvPr-toayUMoWb-8WCHQZEjLSI";
 
             const message = encodeURIComponent(
               `Novo cadastro recebido:\nNome: ${dados.records[0].fields.Nome}\nCPF: ${dados.records[0].fields.CPF}\nPlano: ${dados.records[0].fields.Plano}\nLocalidade: ${dados.records[0].fields.Localidade}`
