--- a/index.html
+++ b/index.html
@@ -246,7 +246,106 @@
           },
           obs: "Com fidelidade: contrato de 12 meses e instalação gratuita após aprovação na consulta de CPF.\nSem fidelidade: instalação custa R$ 200,00 e o cliente pode cancelar a qualquer momento.",
         },
-        // Adicione os outros locais com os dados conforme necessário...
+        "Setor chacareiro Cemitério/Candeias": {
+          instalacao: "350,00 à vista/ R$450,00 Parcelado",
+          planos: { "100MB": "149,99", "200MB": "169,99", "300MB": "184,99" },
+          obs: "R$450,00 Instalação parcelado com entrada de R$200,00",
+        },
+        "Green-PK": {
+          instalacao: "R$200,00",
+          planos: {
+            "200MB": "109,99",
+            "400MB": "134,99",
+            "600MB": "149,99",
+            "800MB": "169,99",
+            "1000MB": "219,99",
+          },
+          obs: "Com fidelidade ou sem fidelidade é R$200,00",
+        },
+        Pamus: {
+          instalacao: "R$350,00 à vista / R$700,00 parcelado",
+          planos: { "100MB": "149,99", "200MB": "199,99", "300MB": "249,99" },
+          obs: "Instalação parcelada tem que dar R$300,00 de entrada",
+        },
+        "55A": {
+          instalacao: "R$350,00 à vista / R$700,00 parcelado",
+          planos: { "100MB": "149,99", "200MB": "199,99", "300MB": "249,99" },
+          obs: "Instalação parcelada tem que dar R$300,00 de entrada",
+        },
+        "55B": {
+          instalacao: "R$350,00 à vista / R$700,00 parcelado",
+          planos: { "100MB": "149,99", "200MB": "199,99", "300MB": "249,99" },
+          obs: "Instalação parcelada tem que dar R$300,00 de entrada",
+        },
+        "BR 364-Cuiba": {
+          instalacao: "R$700,00 à vista / R$1.100,00 parcelado",
+          planos: { "100MB": "169,99", "200MB": "199,99", "300MB": "249,99" },
+          obs: "Instalação parcelada tem que dar R$500,00 de entrada",
+        },
+        "BR 364-PVH": {
+          instalacao: "R$250,00 à vista",
+          planos: { "100MB": "109,99", "200MB": "129,99", "300MB": "139,99" },
+          obs: "",
+        },
+        "Rancho Alegre": {
+          instalacao: "R$600,00 à vista / R$900,00 parcelado",
+          planos: { "100MB": "149,99", "200MB": "199,99", "300MB": "249,99" },
+          obs: "Instalação parcelada tem que dar R$400,00 de entrada",
+        },
+        "BR 364 (Cuiabá,Após o Silos)": {
+          instalacao: "R$800,00 à vista / R$1.300,00 parcelado",
+          planos: { "100MB": "169,99", "200MB": "199,99", "300MB": "249,99" },
+          obs: "Instalação parcelada tem que dar R$500,00 de entrada",
+        },
+        "Corpo Dourado": {
+          instalacao: "R$350,00 à vista / R$450,00 parcelado",
+          planos: { "100MB": "149,99", "200MB": "169,99", "300MB": "184,99" },
+          obs: "Instalação parcelada tem que dar R$200,00 de entrada",
+        },
+        "Santa Luzia": {
+          instalacao: "250,00 à vista",
+          planos: { "100MB": "149,99", "200MB": "169,99", "300MB": "184,99" },
+          obs: "",
+        },
+        "Setor Industrial PVH": {
+          instalacao: "250,00 à vista",
+          planos: { "100MB": "149,99", "200MB": "169,99", "300MB": "184,99" },
+          obs: "",
+        },
+        "Bacia Leiteira Bom Jesus": {
+          instalacao: "R$600,00 à vista / R$900,00 parcelado",
+          planos: { "100MB": "149,99", "200MB": "179,99", "300MB": "229,99" },
+          obs: "Instalação parcelada tem que dar R$400,00 de entrada",
+        },
+        "Bacia Leiteira Ramal do Boto": {
+          instalacao: "R$600,00 à vista / R$900,00 parcelado",
+          planos: { "100MB": "149,99", "200MB": "179,99", "300MB": "229,99" },
+          obs: "Instalação parcelada tem que dar R$400,00 de entrada",
+        },
+        "Bairro 13/ Castanheiras": {
+          instalacao: "R$200,00 à vista",
+          planos: { "100MB": "99,99", "200MB": "119,99", "300MB": "129,99" },
+          obs: "",
+        },
+        Piquiá: {
+          instalacao: "600,00 à vista / 900,00 parcelado",
+          planos: { "100MB": "149,99", "200MB": "179,99", "300MB": "229,99" },
+          obs: "Instalação parcelada tem que dar R$400,00 de entrada",
+        },
+        "Bairro Novo de Candeias": {
+          instalacao: "R$200,00 à vista",
+          planos: {
+            "100MB": "99,99",
+            "200MB": "129,99",
+            "300MB": "139,99",
+            "400MB": "159,99",
+          },
+          obs: "",
+        },
+        "Linha do Caju": {
+          instalacao: "R$350,00 à vista/ parcelado R$600,00",
+          planos: { "100MB": "150,00", "200MB": "170,00", "300MB": "185,00" },
+          obs: "Instalação parcelada tem que dar R$300,00 de entrada",
       };
 
       function mascaraCPF(valor) {
